--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "donations",
-  "version": "0.1.0",
+  "name": "donation-leaderboard",
+  "version": "0.2.0",
   "private": true,
+  "homepage": "https://the-bitcoin-podcast.github.io",
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "glamor": "^2.20.40",
+    "qrcode.react": "^0.9.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-emojione": "^5.0.0",
+    "react-responsive": "^4.0.4",
+    "react-scripts": "^2.1.3",
+    "web3": "1.0.0-beta.30"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start -p 3001",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/giveth/donation-leaderboard/"
   },
   "browserslist": [
     ">0.2%",
