--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "glamor": "^2.20.40",
+    "lodash": "^4.17.11",
     "qrcode.react": "^0.9.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-emojione": "^5.0.1",
     "react-scripts": "2.1.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0",
