--- a/src/semantic/src/theme.config
+++ b/src/semantic/src/theme.config
@@ -42,7 +42,7 @@
 /* Collections */
 @breadcrumb  : 'default';
 @form        : 'material';
-@grid        : 'default';
+@grid        : 'material';
 @menu        : 'default';
 @message     : 'default';
 @table       : 'material';
