few lifestyle changes

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "blockcypher": "^0.2.0",
     "glamor": "^2.20.40",
     "lodash": "^4.17.11",
